--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "dotenv": "^16.4.5",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-async-handler": "^1.2.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "onnxruntime-node": "^1.17.0",
+    "sharp": "^0.33.2"
   }
 }
